# halo2-exercise

./: Cargo.toml  README.md
src/factor/: main.rs
src/fibonacci/: chip.rs  circuit.rs  config.rs  main.rs
src/section1/: main.rs
